# base

./: .gitignore  CMakeLists.txt  README.md  emscripten_build.bat  main.cpp
include/: base.h  base_cfg.h
include/3rdp/: ustring.h
include/functions/: common.h  debug.h  defs.h  emsc_utils.h  enum.h  hash.h  meta.h  profiling.h  profiling.inl  random.h  sdlinclude.h  sort_utils.h  sort_utils.inl  ssu.h  ssu.inl
include/types/: BitScanner.h  BitScanner.inl  Bits.h  Bits.inl  BlockMeasure.h  Call.h  CommonPtr.h  Config.h  Config.inl  EventHandlers.inl  EventsHandler.h  EventsHandler.inl  EventsReciever.h  Exception.h  FileLister.h  FileLister.inl  Index.h  Manager.h  Manager.inl  Mask.h  Mask.inl  ObjFunc.h  ObjFunc.inl  OptionsHandler.h  Path.h  Path.inl  RefCommonPtr.h  RefPtr.h  SimpleFont.h  SimpleFont.inl  Singleton.h  Singleton.inl  TestBench.h  TestBench.inl  Timer.h  Timer.inl  Type.h  Type.inl  Type_internal.h  TypedFuncs.h  (+8 more)
include/types/containers/: Array.h  Array.inl  ChunkedBuffer.h  ChunkedBuffer.inl  CompsPool.h  CompsPool.inl  HashMap.h  HashMap.inl  HashSet.h  HashSet.inl  ItemAutoPtr.h  ItemPtr.h  ItemPtr.inl  ItemRefPtr.h  ItemRefPtr.inl  Items.h  Items2.h  MultiPool.h  MultiPool.inl  PolyPool.h  PolyPool.inl  Pool.h  Pool.inl  RoundBuffer.h  SharedBuffer.h  SharedBuffer.inl  SortedArray.h  SortedArray.inl  TightPool.h  TightPool.inl  VArray.h  VArray.inl  VVector2.inl  fast_vector.h
src/: base.h
src/functions/: common.h  debug.h  defs.h  meta.h  random.h  sort_utils.h  sort_utils.inl  string_utils.h  string_utils.inl  undefs.h
src/types/: BlockMeasure.h  Call.h  CommonPtr.h  Config.h  Exception.h  FileLister.h  FileLister.inl  Index.h  Manager.h  Manager.inl  Mask.h  OptionsHandler.h  Path.h  Path.inl  RefCommonPtr.h  RefCount.h  RefPtr.h  Singleton.h  Singleton.inl  Timer.h  Timer.inl  Type.h  Type.inl  Type_internal.h  Variant.h  Variant.inl  VariantCaller.h  VersionedIndex.h  variant_helper.h
src/types/containers/: Array.h  Array.inl  HashMap.h  HashMap.inl  HashSet.h  HashSet.inl  MultiPool.h  MultiPool.inl  Pool.h  Pool.inl  RoundBuffer.h  SharedBuffer.h  SharedBuffer.inl  SortedSet.h  SortedSet.inl  TightPool.h  TightPool.inl  UnsortedVector.h  UnsortedVector.inl  UnsortedVersionedVector.h  UnsortedVersionedVector.inl  VVector.h  VVector.inl  VVector2.h  VVector2.inl  fast_vector.h
test/: MyDomain.h  main.cpp  test_containers.h  test_enum.h  test_event_handlers.h  test_type_if.h  test_types.h  test_variants.h
